@@ -30,7 +30,6 @@ import javax.servlet.http.HttpServletRequest;
 import org.fenixedu.academic.FenixEduAcademicConfiguration;
 import org.fenixedu.academic.domain.Installation;
 import org.fenixedu.academic.domain.organizationalStructure.UnitNamePart;
-import org.fenixedu.academic.domain.student.registrationStates.RegistrationStateType;
 import org.fenixedu.academic.service.StudentWarningsDefaultCheckers;
 import org.fenixedu.academic.service.StudentWarningsService;
 import org.fenixedu.bennu.core.api.SystemResource;
@@ -62,14 +61,6 @@ public class FenixInitializer implements ServletContextListener {
         registerHealthchecks();
         registerDefaultStudentWarningCheckers();
 
-        bootstrapRegistrationStateType();
-    }
-
-    @Atomic
-    private void bootstrapRegistrationStateType() {
-        logger.info("[RegistrationStateType] bootstrap start..");
-        RegistrationStateType.bootstrap();
-        logger.info("[RegistrationStateType] bootstrap end!");
     }
 
     private void registerDefaultStudentWarningCheckers() {
