@@ -1,5 +1,6 @@
 - Refactor: Remove creationDateDateTime attribute from ExternalEnrolment
 - Refactor: Rename creationDateDateTime attribute of external enrolment (step 2/2)
+- Refactor: Remove RegistrationStateType bootstrap on system init
 
 40.2.0 (20-12-2022)
 - Refactor: Replace usage of RegistrationStateTypeEnum by RegistrationStateType
